--- a/style.css
+++ b/style.css
@@ -28,8 +28,9 @@ body {
     grid-row-end: 3;
 }
 .item5 {
-    grid-row-start:2 ;
-    grid-row-end: 4;
+    grid-row-start:3;
+    grid-row-end:5;
+    grid-column-start: 2;
 }
 .item3 {
     grid-column-start: 3;
